erDiagram
    USERS ||--o{ VENDORS : "creates"
    USERS ||--o{ ORDERS : "places"
    USERS ||--o{ SUPPORT_TICKETS : "creates"
    USERS ||--o{ NOTIFICATIONS : "receives"
    USERS ||--o{ AUDIT_LOGS : "triggers"
    VENDORS ||--o{ ORDERS : "receives"
    VENDORS ||--o{ PAYMENT_TRANSACTIONS : "processes"
    ORDERS ||--o{ DOCUMENTS : "contains"
    ORDERS ||--o{ PAYMENT_TRANSACTIONS : "has"
    SUPPORT_TICKETS ||--o{ NOTIFICATIONS : "generates"

    USERS {
        int id PK
        string name
        string email UK
        string phone
        string password
        enum role
        string regno "for students"
        string otp
        boolean verified
        timestamp created_at
        timestamp updated_at
    }
    
    VENDORS {
        int id PK
        int user_id FK
        string shop_name
        decimal price_bw
        decimal price_color
        enum status
        decimal latitude
        decimal longitude
        string location
        text photos "JSON array"
        enum queue_status
        int queue_count
        timestamp created_at
        timestamp updated_at
    }
    
    ORDERS {
        int id PK
        string order_number UK
        int student_id FK
        int vendor_id FK
        decimal total_price
        enum status
        enum payment_status
        string payment_method
        text notes
        timestamp created_at
        timestamp updated_at
    }
    
    DOCUMENTS {
        int id PK
        int order_id FK
        string original_name
        string stored_name
        string file_path
        string mime_type
        int file_size
        int copies
        enum color_mode
        boolean binding
        text notes
        enum status
        timestamp uploaded_at
    }
    
    SUPPORT_TICKETS {
        int id PK
        int user_id FK
        string subject
        text message
        enum status
        enum priority
        text response
        timestamp created_at
        timestamp updated_at
        timestamp resolved_at
    }
    
    PAYMENT_TRANSACTIONS {
        int id PK
        int order_id FK
        decimal amount
        string payment_method
        string transaction_id
        enum status
        json response_data
        timestamp created_at
        timestamp updated_at
    }
    
    AUDIT_LOGS {
        int id PK
        int user_id FK
        string action
        string entity_type
        int entity_id
        json old_values
        json new_values
        string ip_address
        text user_agent
        timestamp created_at
    }
    
    NOTIFICATIONS {
        int id PK
        int user_id FK
        string type
        string title
        text message
        string related_entity_type
        int related_entity_id
        boolean is_read
        timestamp created_at
        timestamp read_at
    }
